<resources>
    <string name="app_name">Contacts</string>
    
    <string name="name_label">Name</string>
    <string name="phone_label">Phone</string>

    <string name="insert_button">Add</string>
    <string name="update_button">Edit</string>
    <string name="delete_button">Delete</string>

    <string name="insert_success_message">Contact successfully added.</string>
    <string name="insert_failure_message">Validation has failed.</string>

    <string name="update_success_message">Contact successfully updated.</string>
    <string name="update_failure_message">Validation has failed.</string>
    <string name="update_error_message">No contact selected.</string>

    <string name="delete_success_message">Contact successfully deleted.</string>
    <string name="delete_error_message">No contact selected.</string>
</resources>
